0.7.0005 Fixed gameboard cropped issue & added restart buttons on overlaymodal

--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ html, body {
     border: 1px solid #ccc;
     border-radius: 8px;
     font-size: 1rem;
-    width: 100px;
+    width: 150px;
     outline: none;
     height: 50px;
   }
@@ -189,21 +189,18 @@ html, body {
     z-index: 9999;
     font-size: 3rem;
     padding: 20vh 0 0 0;
-}
+    transition: opacity 0.3s ease, display 0.3s ease;
+  }
 
-  #countdown-number {
-    top: 50%;
-    margin: 20px;
-    font-size: 4rem;
-    font-weight: 700;
+  #countdown-overlay.hide {
+    opacity: 0;
   }
-  .guide-message {
-    font-size: 1.2rem;
-    width: 80vw;
-    text-align: center;
+
+  #guideMessage {
+    font-size:1.2rem;
+    font-weight: 600;
+    color: #999999;
   }
-  
-  /* ===== [게임화면] ===== */
   #game-container {
     display: none;
     flex-direction: column;
@@ -211,7 +208,12 @@ html, body {
     touch-action: none;
     background: #fafafa;
     height: 100%;
-}
+    transition: opacity 0.3s ease, display 0.3s ease;
+  }
+  
+  #game-container.hide {
+    opacity: 0;
+  }
   
   /* 상단바 */
   #info-bar {
@@ -354,7 +356,7 @@ html, body {
     overflow: hidden;
   }
   .success-line::after {
-    content: "+";
+    content: "✓";
     position: absolute;
     right: 8px;
     top: 8px;
@@ -448,7 +450,7 @@ html, body {
   /* ===== [토스트 메시지] ===== */
   #toast-message {
     position: fixed;
-    bottom: 150px;
+    bottom: 190px;
     left: 50%;
     transform: translateX(-50%) translateY(100px);
     background-color: var(--toast-background);
@@ -558,6 +560,7 @@ html, body {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    height: 94px;
     gap: 10px;
 }
 #footer p {
@@ -677,22 +680,4 @@ html, body {
   align-content: center;
   flex-direction: column;
   margin: 20px 0 10px 0;
-}
-
-.fade-in {
-  animation: fadeIn 0.4s forwards;
-}
-
-.fade-out {
-  animation: fadeOut 0.4s forwards;
-}
-
-@keyframes fadeIn {
-  from { opacity: 0; }
-  to { opacity: 1; }
-}
-
-@keyframes fadeOut {
-  from { opacity: 1; }
-  to { opacity: 0; }
 }
